fixed viewing on smaller screen

--- a/client/calendar/src/components/AlertCalendar.css
+++ b/client/calendar/src/components/AlertCalendar.css
@@ -4,6 +4,7 @@
     justify-content: space-around;
     top: 250px !important;
     left: 150px;
+    flex-wrap: wrap;
 }
 
 .calendarComponent {
