--- a/client/calendar/src/components/RouteStatusCard.css
+++ b/client/calendar/src/components/RouteStatusCard.css
@@ -1,5 +1,5 @@
 .card-container {
-    width: 500px;
+    max-width: 375px;
     box-shadow: 0px 0px 15px -5px;
     transition: 0.5s;
     animation:  ease-in;
